Initial commit of RevPlay project